<resources>
    <string name="app_name">UGO Driver</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="google_api_key">AIzaSyDIKxEj9TzalzfhG7r5tA83EbmZCWvXeow</string>
    <string name="geocoding_api_key">AIzaSyDIKxEj9TzalzfhG7r5tA83EbmZCWvXeow</string>
    <string name="place_api_key">AIzaSyDIKxEj9TzalzfhG7r5tA83EbmZCWvXeow</string>


    <string name="camera_permission_error">Camera Permission error</string>


    <string name="msg_enter_name">Enter name</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="select_option">Select Option</string>
    <string name="loading">loading</string>
    <string name="msg_enter_city">Enter city</string>
    <string name="msg_enter_email">Enter email</string>
    <string name="msg_enter_valid_email">Enter valid email</string>
    <string name="msg_enter_mobile">Enter mobile number</string>
    <string name="msg_enter_10digitmobile">Enter 10-digit mobile number</string>
    <string name="msg_enter_password">Enter password</string>
    <string name="msg_enter_6character_password">Enter 6 character password</string>
    <string name="msg_enter_confirm_password">Re-Enter password</string>
    <string name="msg_password_not_same">Password not same</string>
    <string name="msg_otp">Enter 6-digit Otp</string>
    <string name="gallery_access">Phone gallery access needed</string>
    <string name="gallery_access_prevent">Please confirm phone gallery access to prevent interruptions</string>

    <string name="main_action_crop">Crop</string>



    /////////////////////////////////////

    <!--driver cancel reason ...-->

    <string name="driver_cancel_reason1">User was far away</string>
    <string name="driver_cancel_reason2">User not found</string>
    <string name="driver_cancel_reason3">User not received call</string>
    <string name="driver_cancel_reason4">I M busy for own booking</string>
    <string name="driver_cancel_reason5">Not interested for this booking</string>
    <string name="driver_cancel_reason6">Cab not working</string>
    <string name="driver_cancel_reason7">I Want to take break</string>
    <string name="driver_cancel_reason8">Other</string>



    /////////////////////////////////



    <string name="msg_paytm">This payment has to be collected via paytm. Kindly cross check with registered paytm number and confirm.</string>


</resources>
