<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:background="@color/yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/back"
            android:layout_margin="20dp"
            android:src="@drawable/back"
            android:layout_width="20dp"
            android:tint="@color/colorPrimary"
            android:layout_height="20dp" />


        <TextView
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:text="Cancellation Reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/confirm"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            >


            <android.support.v7.widget.CardView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"

                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view5"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">


                <RelativeLayout
                    android:padding="15dp"
                    android:id="@+id/rl1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/too_far"
                        android:textSize="20sp"
                        android:textColor="@color/btnblack"
                        android:text="@string/driver_cancel_reason1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <ImageView
                        android:id="@+id/icon1"
                        android:visibility="gone"
                        android:src="@drawable/tick_icon"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">


                <RelativeLayout
                    android:padding="15dp"
                    android:id="@+id/rl2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/not_picking_call"
                        android:textSize="20sp"
                        android:textColor="@color/btnblack"
                        android:text="@string/driver_cancel_reason2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <ImageView
                        android:id="@+id/icon2"
                        android:src="@drawable/tick_icon"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                </RelativeLayout>


            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">


                <RelativeLayout
                    android:padding="15dp"
                    android:id="@+id/rl3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/tv3"
                        android:textSize="20sp"
                        android:textColor="@color/btnblack"
                        android:text="@string/driver_cancel_reason3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <ImageView
                        android:id="@+id/icon3"
                        android:src="@drawable/tick_icon"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                </RelativeLayout>


            </android.support.v7.widget.CardView>




            <android.support.v7.widget.CardView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">


                <RelativeLayout
                    android:padding="15dp"
                    android:id="@+id/rl4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/tv4"
                        android:textSize="20sp"
                        android:textColor="@color/btnblack"
                        android:text="@string/driver_cancel_reason4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <ImageView
                        android:id="@+id/icon4"
                        android:src="@drawable/tick_icon"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                </RelativeLayout>


            </android.support.v7.widget.CardView>




            <android.support.v7.widget.CardView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">


                <RelativeLayout
                    android:padding="15dp"
                    android:id="@+id/rl5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/tv5"
                        android:textSize="20sp"
                        android:textColor="@color/btnblack"
                        android:text="@string/driver_cancel_reason5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <ImageView
                        android:id="@+id/icon5"
                        android:src="@drawable/tick_icon"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                </RelativeLayout>


            </android.support.v7.widget.CardView>




            <android.support.v7.widget.CardView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">


                <RelativeLayout
                    android:padding="15dp"
                    android:id="@+id/rl6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/tv6"
                        android:textSize="20sp"
                        android:textColor="@color/btnblack"
                        android:text="@string/driver_cancel_reason6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <ImageView
                        android:id="@+id/icon6"
                        android:src="@drawable/tick_icon"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                </RelativeLayout>


            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">


                <RelativeLayout
                    android:padding="15dp"
                    android:id="@+id/rl7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/tv7"
                        android:textSize="20sp"
                        android:textColor="@color/btnblack"
                        android:text="@string/driver_cancel_reason7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <ImageView
                        android:id="@+id/icon7"
                        android:src="@drawable/tick_icon"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                </RelativeLayout>


            </android.support.v7.widget.CardView>





            <android.support.v7.widget.CardView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">


                <RelativeLayout
                    android:id="@+id/rl8"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/other"
                        android:textSize="20sp"
                        android:textColor="@color/btnblack"
                        android:text="@string/driver_cancel_reason8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/icon8"
                        android:src="@drawable/tick_icon"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <EditText
                android:id="@+id/edt_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="Write your reason"
                />


        </LinearLayout>



    </ScrollView>


    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/confirm"
        android:textColor="#ffffff"
        android:layout_gravity="bottom"
        android:padding="10dp"
        android:text="CONFIRM CANCELLATION"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>